services/whoami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-demo
spec:
  selector:
    app: whoami-demo
  ports:
  - name: http
    targetPort: 80
    port: 80
