services/whoami/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: whoami.gce.manuel-zapf.de
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-demo
          servicePort: 80
